# markman

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
.github/workflows/: release.yml
assets/: RenderedView-Ce2IZUqX.js  RenderedView-DsymuWkF.js  core-BNlxEVGd.js  dist-js-C0kJXEkF.js  event-D2SK393U.js  index-BWeq4aRp.css  index-Cum8oqR_.css  index-D1bGBEVJ.js  index-DeNUtYZ1.js  index-afFzdqYK.css  index-fwo95MUI.js
src/: App.css  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutDialog.tsx  CommandPalette.tsx  Layout.tsx  LeftSidebar.tsx  PageFlip.tsx  PreviewView.tsx  RenderedView.tsx  RightSidebar.tsx  SourceView.tsx  Toolbar.tsx  TopBar.tsx
src/context/: AppContext.tsx
src/data/: sampleDoc.ts  sampleDocs.ts
src/hooks/: useDocumentStore.ts  useHistory.ts  useScrollSpy.ts  useTableOfContents.ts
