[package]
name = "markman"
version = "0.0.6"
description = "A Notion-style markdown document viewer and editor with three seamless view modes"
authors = ["nhnpro"]
edition = "2021"

[lib]
name = "markman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
ureq = { version = "3", features = ["rustls"] }
pulldown-cmark = "0.12"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
